# ssq-tool

./: .gitignore  Cargo.toml  LICENSE  README.md  generate.txt  official_data.json
collector/: Cargo.toml
collector/src/: error.rs  lib.rs  local.rs  remote.rs
collector/src/raw/: mod.rs
collector/src/raw/codec/: date_codec.rs  mod.rs  prize_grade_codec.rs  red_balls_codec.rs  vec_str_codec.rs
domain/: Cargo.toml
domain/src/: lib.rs
executor/: Cargo.toml
executor/src/: error.rs  main.rs
executor/src/service/: mod.rs  occur_service.rs  ssq_mcp_service.rs
log/: ssq.log.2025-09-30  ssq.log.2025-10-01  ssq.log.2025-10-02  ssq.log.2025-10-05  ssq.log.2025-10-06  ssq.log.2025-10-07
processor/: Cargo.toml
processor/src/: ball_occurrence.rs  ball_relationship_fp.rs  blue_ball_occurrence_fp.rs  context.rs  context_obj.rs  error.rs  final_result.rs  generate_normalize_data.rs  lib.rs  occur.rs  relationship.rs  summary.rs
processor/src/prepare/: mod.rs  occur.rs  occurrence.rs
processor/src/summary/: customize.rs  mod.rs
src/: collector.rs  error.rs  main.rs  official.rs
src/data/: storage.rs
src/domain/: business.rs  mod.rs  official.rs
src/domain/codec/: date_codec.rs  mod.rs  prize_grade_codec.rs  u64_codec.rs  u8_codec.rs  usize_codec.rs  vec_str_codec.rs  vec_u8_codec.rs  vec_usize_codec.rs
src/processor/: business_obj.rs  context_obj.rs  count_prized_blueball.rs  count_prized_redball.rs  mod.rs  occur.rs  occur_interval.rs  prepare.rs  relationship.rs  storage.rs
src/processor/summary/: mod.rs  occur_based.rs  relationship_based.rs  top_blue_ball_relationship.rs  top_counts.rs  top_red_ball_relationship.rs
