[package]
name = "quh-shuangseqiu"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
polars = "0.51.0"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.227", features = ["serde_derive"] }
serde_json = "1.0.145"
serde_repr = "0.1.20"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.20", features = ["time"] }
