[workspace]
members = ["collector", "domain", "executor", "processor"]
resolver = "3"
[workspace.dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.145"
serde_repr = "0.1.20"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.20", features = ["time"] }
itertools = "0.14.0"
clap = "4.5.48"
derive_more = "2.0.1"
strum = "0.27.2"
rmcp = { version = "0.8.1" }
rmcp-actix-web = "0.8.9"
actix-web = "4.11.0"
tokio-stream = "0.1.17"
tokio-util = "0.7.16"
sse-stream = "0.2.1"
