[package]
name = "executor"
version = "0.1.0"
edition = "2024"

[dependencies]
ssq-tool-collector = { path = "../collector", package = "collector" }
ssq-tool-processor = { path = "../processor", package = "processor" }
tracing = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
