[package]
name = "processor"
version = "0.1.0"
edition = "2024"

[dependencies]
ssq-tool-domain = { path = "../domain", package = "domain" }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
itertools = { workspace = true }
derive_more = { workspace = true, features = ["display"] }
strum = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
fp-growth = { workspace = true }

